--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+button {
+  width: 98px;
+}
+
 .strike {
   text-decoration: line-through;
 }
@@ -39,15 +43,17 @@ code {
 }
 
 .addSongForm {
-  margin: 50px 100px;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
+  max-width: 350px;
 }
 
 .addSongForm input {
   margin-bottom: 12px;
+  height: 25px;
 }
 
 .addSongForm button {
-  margin: 0px 5em
+  margin-left: auto;
 }
